--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,34 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
+body {
+    font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    border-color: #1F2937;
+    margin: 0;
+}
+
+.header, .hero {
+    background-color: #1F2937;
+    padding: 30px 200px;
+}
+
 .header {
     display: flex;
+    height: 32px;
 }
 
 nav {
     margin-left: auto;
-    padding: 0 100px;
     display: flex;
     gap: 25px;
 }
 
 a {
     text-decoration: none;
+    color: #F9FAF8;
+}
+
+.logo {
+    font-size: 24px;
+    color: #F9FAF8;
+    font-weight: bold;
 }
