--- a/styles.css
+++ b/styles.css
@@ -41,8 +41,11 @@ a {
 
 img {
     height: 200px;
-    display: flex;
     flex-shrink: 2;
+}
+
+.hero-img {
+    display: flex;
     padding: 20px 50px;
     padding-top: 0;
     margin-left: auto;
@@ -72,4 +75,28 @@ img {
     padding: 5px 20px;
     border: none;
     border-radius: 2px;
+}
+
+.info {
+    padding: 10px 450px;
+    display: flex;
+    text-align: center;
+    gap: 30px;
+    justify-content: space-between;
+    padding-bottom: 75px;
+}
+
+.title {
+    text-align: center;
+    padding: 30px;
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1F2937;
+    padding-bottom: 20px;
+}
+
+.info-img {
+    height: 150px;
+    border: 5px solid #3882f6;
+    border-radius: 10%;
 }
