--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
 .header {
     display: flex;
     height: 32px;
-    padding: 20px 450px;
+    padding: 20px 350px;
 }
 
 nav {
@@ -93,10 +93,30 @@ img {
     font-weight: bolder;
     color: #1F2937;
     padding-bottom: 20px;
+    padding-top: 50px;
 }
 
 .info-img {
     height: 150px;
     border: 5px solid #3882f6;
     border-radius: 10%;
+}
+
+.quote {
+    padding: 100px 450px;
+    background: #E5E7EB;
+}
+
+.quote-text {
+    font-size: 28px;
+    font-weight: lighter;
+    font-style: italic;
+    color: #1F2937;
+}
+
+.by-line {
+    font-weight: bolder;
+    color: #1F2937;
+    text-align: end;
+    font-size: 20px;
 }
